Updated all pix

--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -53,20 +53,7 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-2" data-uk-modal="{center: true}">
-                <img width="500" height="500" src="" alt="">
-                <div class="uk-overlay-area">
-                  <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
-                    <div>$9,00</div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
-          <li class="uk-row-first">
-            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
-              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
-                <img width="500" height="500" src="" alt="">
+                <img width="500" height="500" src="/images/videoproduction/VP1.jpg" alt="VP1.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
                     <h2 class="uk-h5 tm-overlay-title">''</h2>
@@ -76,6 +63,97 @@
               </a>
             </div>
           </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP2.jpg" alt="VP2.jpg">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP3.JPG" alt="VP3.JPG">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP4.JPG" alt="VP4.JPG">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP5.JPG" alt="VP5.JPG">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP6.jpg" alt="VP6.jpg">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP7.jpg" alt="VP7.jpg">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
+              <a class="uk-overlay" href="#modal-8" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/videoproduction/VP8.JPG" alt="VP8.JPG">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>                                                                      
         </ul>
       </li>
 
@@ -194,29 +272,107 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="500" height="500" src="/themes/joomla/2014/eat/images/yootheme/home_products_cookies.jpg" alt="Chocolate chip cookies">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers1.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Chocolate chip cookies'</h2>
-                    <div>$8,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
             </div>
           </li>
           <li class="uk-row-first">
-            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
-              <a class="uk-overlay" href="#modal-7" data-uk-modal="{center: true}">
-                <img width="500" height="500" src="/themes/joomla/2014/eat/images/yootheme/home_products_chocolate.jpg" alt="Chocolate pralines">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers2.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Chocolate pralines'</h2>
-                    <div>$6,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
             </div>
           </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers3.JPG" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers4.JPG" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers5.jpg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers6.JPG" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers7.jpg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/fundraiser/Fundraisers8.jpg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>                                                            
         </ul>
       </li>
 
@@ -225,29 +381,81 @@
           <li class="uk-row-first">
             <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
               <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
-                <img width="500" height="500" src="/themes/joomla/2014/eat/images/yootheme/home_products_cookies.jpg" alt="Chocolate chip cookies">
+                <img width="500" height="500" src="/images/speakersbureau/Speakers1.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Chocolate chip cookies'</h2>
-                    <div>$8,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
             </div>
           </li>
           <li class="uk-row-first">
-            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-150">
-              <a class="uk-overlay" href="#modal-7" data-uk-modal="{center: true}">
-                <img width="500" height="500" src="/themes/joomla/2014/eat/images/yootheme/home_products_chocolate.jpg" alt="Chocolate pralines">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/speakersbureau/Speakers2.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Chocolate pralines'</h2>
-                    <div>$6,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
             </div>
           </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/speakersbureau/Speakers3.jpg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/speakersbureau/Speakers4.jpeg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/speakersbureau/Speakers5.jpeg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>
+          <li class="uk-row-first">
+            <div class="uk-thumbnail uk-overlay-toggle uk-animation-fade tm-animation-delay-50">
+              <a class="uk-overlay" href="#modal-6" data-uk-modal="{center: true}">
+                <img width="500" height="500" src="/images/speakersbureau/Speakers6.jpeg" alt="">
+                <div class="uk-overlay-area">
+                  <div class="uk-overlay-area-content">
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </li>                                        
         </ul>
       </li>      
 
