--- a/TopB.html
+++ b/TopB.html
@@ -8,7 +8,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/become-a-member.html"><span style="color: #036d98;">BECOME A MEMBER</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="220" />
+<img class="uk-align-center" src="/safe1/images/JoinTheMovement.jpg" width="220" height="220" />
 
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -29,7 +29,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-animation-top-right" href="/safe1/finding-help/national-directory.html"><span style="color: #036d98;">National Directory</span></a></h3>
-<img id="usa" class="map" name="usa" alt="" src="/images/usa2.png" width="220" height="220" usemap="#usa" />
+<img id="usa" class="map uk-align-center" name="usa" alt="" src="/images/usa2.png" width="220" height="220" usemap="#usa" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -70,7 +70,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/how-to-help/internship-opportunities.html"><span style="color: #036d98;">INTERNSHIP OPPORTUNITIES</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<img class="uk-align-center" src="/images/internship/IMG_0002.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
