Added Our Store button

--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -179,8 +179,8 @@
                 <img width="500" height="500" src="/images/internship/Internship2.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -192,8 +192,8 @@
                 <img width="500" height="500" src="/images/internship/Internship3.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -205,8 +205,8 @@
                 <img width="500" height="500" src="/images/internship/Internship4.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -218,8 +218,8 @@
                 <img width="500" height="500" src="/images/internship/Internship5.JPG">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -231,8 +231,8 @@
                 <img width="500" height="500" src="/images/internship/Internship6.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -244,8 +244,8 @@
                 <img width="500" height="500" src="/images/internship/Internship7.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -257,8 +257,8 @@
                 <img width="500" height="500" src="/images/internship/Internship8.jpg">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">'Arabica coffee'</h2>
-                    <div>$12,00</div>
+                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <div></div>
                   </div>
                 </div>
               </a>
@@ -464,7 +464,7 @@
   </div>
 </div>
 
-<a class="uk-button uk-button-primary uk-margin-large-top" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default#">Online Shop</a>
+<a class="uk-button uk-button-primary uk-margin-large-top" href="/safe1/index.php?option=com_beacart&view=frontpage">Our Store</a>
 
 
 <div id="modal-1" class="uk-modal">
@@ -497,7 +497,7 @@
 <div id="modal-5" class="uk-modal">
     <div class="uk-modal-dialog uk-modal-dialog-lightbox">
         <a href="https://demo.yootheme.com/themes/joomla/2014/eat/?&amp;style=default" class="uk-modal-close uk-close uk-close-alt"></a>
-        <img width="500" height="500" src="/themes/joomla/2014/eat/images/yootheme/home_products_coffee.jpg" alt="Arabica coffee">
+        <img width="500" height="500" src="/themes/joomla/2014/eat/images/yootheme/home_products_coffee.jpg" alt="">
     </div>
 </div>
 
